<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_board"
            android:icon="@mipmap/ic_action_paste"
            android:title="@string/nav_board" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_menu_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_messages"
            app:actionViewClass="android.widget.TextView"
            android:icon="@mipmap/ic_menu_messages"
            android:title="@string/nav_messages" />
        <item
            android:id="@+id/nav_guests"
            app:actionViewClass="android.widget.TextView"
            android:icon="@mipmap/ic_menu_guests"
            android:title="@string/nav_guests" />
        <item
            android:id="@+id/nav_simpatii"
            app:actionViewClass="android.widget.TextView"
            android:icon="@mipmap/ic_action_star"
            android:title="@string/nav_simpatii" />
        <item
            android:id="@+id/nav_frinds"
            app:actionViewClass="android.widget.TextView"
            android:icon="@mipmap/ic_menu_friends"
            android:title="@string/nav_frinds" />
        <item
            android:id="@+id/nav_notises"
            app:actionViewClass="android.widget.TextView"
            android:icon="@mipmap/ic_menu_notify"
            android:title="@string/nav_notises" />
    </group>

    <item android:title="@string/nav_datting">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_groups"
                    android:icon="@mipmap/ic_menu_guests"
                    android:title="@string/title_activity_groups" />
                <item
                    android:id="@+id/nav_search"
                    android:icon="@mipmap/ic_menu_datting"
                    android:title="@string/nav_looking_for" />
                <item
                    android:id="@+id/nav_servises"
                    android:icon="@mipmap/ic_action_share"
                    android:title="@string/nav_servises" />
            </group>
        </menu>
    </item>

    <item android:title="@string/nav_edit">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_edit"
                    android:icon="@mipmap/ic_action_edit"
                    android:title="@string/nav_edit_profile" />
                <item
                    android:id="@+id/nav_edit_profile"
                    android:icon="@mipmap/ic_menu_settings"
                    android:title="@string/title_activity_setting_of_profile" />
                <item
                    android:id="@+id/nav_support"
                    android:icon="@mipmap/ic_action_about"
                    android:title="@string/nav_edit_support" />
            </group>
        </menu>
    </item>

</menu>
